// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-upgrade - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and upgrade Azure workloads or modernize Azure SDK dependencies. WHEN: upgrade Consumption to Flex Consumption, upgrade Azure Functions plan, migrate hosting plan, function app SKU, migrate App Service to Container Apps, migrate legacy Azure SDKs for Java, com.microsoft.azure to com.azure. DO NOT USE FOR: Azure Local updates or upgrades; use azure-local.",
  "extractedKeywords": [
    "app service",
    "apps",
    "assess",
    "azure",
    "azure-local",
    "consumption",
    "container",
    "dependencies",
    "deploy",
    "flex",
    "function",
    "functions",
    "hosting",
    "java",
    "legacy",
    "local",
    "mcp",
    "microsoft",
    "migrate",
    "modernize",
    "monitor",
    "plan",
    "sdks",
    "service",
    "updates",
    "upgrade",
    "upgrades",
    "validation",
    "when",
    "workloads",
  ],
  "name": "azure-upgrade",
}
`;

exports[`azure-upgrade - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app service",
  "apps",
  "assess",
  "azure",
  "azure-local",
  "consumption",
  "container",
  "dependencies",
  "deploy",
  "flex",
  "function",
  "functions",
  "hosting",
  "java",
  "legacy",
  "local",
  "mcp",
  "microsoft",
  "migrate",
  "modernize",
  "monitor",
  "plan",
  "sdks",
  "service",
  "updates",
  "upgrade",
  "upgrades",
  "validation",
  "when",
  "workloads",
]
`;
